objects/Location.object
<CustomObject>
    <fields>
        <fullName>Closing_Time__c</fullName>
        <label>Closing Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opening_Time__c</fullName>
        <label>Opening Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Facilities__c</fullName>
        <label>Facilities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Preferred_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Services__c</fullName>
        <label>Services</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Store_Timings__c</fullName>
        <label>Store Timings</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>All_Locations</fullName>
        <columns>Name</columns>
        <columns>LocationType</columns>
        <columns>VisitorAddress</columns>
        <columns>ParentLocation</columns>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <listViews>
        <fullName>My_Locations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Locations</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>